# Stereo-Matching

./: .gitignore  CMakeLists.txt  StereoMatcher.cpp  cl_helpers.h  cl_kernel_launcher.h  compile_stereo_matcher.sh  project_types.h  stereo_matcher.sublime-project
BMPCompare/: bmp_compare.cpp
cl_kernels/: stereo_matching_kernels.cl
images/: link_to_the_images.txt
